--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2024"
 [dependencies]
 clap = { version = "4.4", features = ["derive"] }
 console = "0.15"
+[dev-dependencies]
+assert_fs = "1"
