--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,9 @@ edition = "2024"
 [dependencies]
 clap = { version = "4.4", features = ["derive"] }
 console = "0.15"
+ignore = "0.4"
+globset = "0.4"
+walkdir = "2.4"
+
 [dev-dependencies]
 assert_fs = "1"
