--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 clap = { version = "4.4", features = ["derive"] }
 console = "0.15"
 dialoguer = "0.11.0"
+fs_extra = "1.3.0"
 globset = "0.4"
 indicatif = "0.17.11"
 walkdir = "2.4"
