--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,13 @@
 name = "crufty"
 version = "0.1.0"
 edition = "2024"
+license = "MIT"
+description = "A command-line tool that scans projects for large build artifacts and cleans them up safely"
+homepage = "https://github.com/EncodePanda/crufty"
+repository = "https://github.com/EncodePanda/crufty"
+readme = "README.md"
+categories = ["command-line-utilities"]
+
 
 [dependencies]
 clap = { version = "4.4", features = ["derive"] }
