--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "crufty"
-version = "0.1.0"
+version = "0.2.0-rc1"
 edition = "2024"
 license = "MIT"
 description = "A command-line tool that scans projects for large build artifacts and cleans them up safely"
